@@ -1,3 +1,8 @@
+Thu Jun 28 17:57:49 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* win32/win32.c (is_socket, is_console): add prototypes to fix compile
+	  problem with gcc introduced at r32549.
+
 Wed Jun 27 08:31:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* insns.def (splatarray): make new array if flag is set.
